--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "next": "16.0.7",
+    "next-intl": "^4.5.8",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
