--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/supabase-js": "^2.86.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "next-intl": "^4.5.8",
     "react": "19.2.0",
     "react-dom": "19.2.0"
